Usa el formato simplificado de pytest en lugar de unittest

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-# Dependencias para las pruebas
+# Dependencias de instalación
+git+https://github.com/IslasGECI/geoambiental.git@v0.1.0
+# Dependencias de desarrollo
+autopep8
 codecov
+pylint
 pytest
 pytest-cov
-# Dependencias de desarrollo
-git+https://github.com/IslasGECI/geoambiental.git@v0.1.0
+rope
